--- a/package.json
+++ b/package.json
@@ -11,18 +11,32 @@
         "lint": "eslint ."
     },
     "dependencies": {
+        "axios": "^0.19.0",
+        "final-form": "^4.18.5",
+        "firebase": "^7.2.1",
+        "lodash": "^4.17.15",
         "react": "16.9.0",
+        "react-final-form-hooks": "^2.0.1",
         "react-native": "0.61.2",
         "react-native-gesture-handler": "^1.4.1",
-        "react-native-reanimated": "^1.3.0",
+        "react-native-linear-gradient": "^2.5.6",
+        "react-native-material-dropdown": "^0.11.1",
+        "react-native-modal": "^11.5.1",
+        "react-native-paper": "^2.16.0",
+        "react-native-reanimated": "^1.4.0",
         "react-native-screens": "^2.0.0-alpha.4",
         "react-native-tab-view": "^2.10.0",
+        "react-native-vector-icons": "^6.6.0",
         "react-native-webview": "^7.4.2",
         "react-navigation": "^4.0.10",
+        "react-navigation-animated-switch": "^0.3.2",
+        "react-navigation-material-bottom-tabs": "^2.1.2",
         "react-navigation-stack": "^1.9.4",
+        "react-navigation-tabs": "^2.5.6",
         "react-redux": "^7.1.1",
         "react-spring": "^8.0.27",
         "redux": "^4.0.4",
+        "sleep-promise": "^8.0.1",
         "styled-components": "^4.4.0"
     },
     "devDependencies": {
