--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
     "name": "cypress-edge-rn-blog",
     "version": "0.0.1",
     "private": true,
+    "repository": {
+        "type": "git",
+        "url": "git@github.com:zachyutw/cypress-edge-rn-blog.git"
+    },
     "scripts": {
         "android": "react-native run-android",
         "ios": "react-native run-ios",
@@ -11,11 +15,15 @@
         "lint": "eslint ."
     },
     "dependencies": {
+        "@react-native-community/google-signin": "^3.0.3",
+        "@react-native-firebase/app": "^6.0.3",
+        "@react-native-firebase/auth": "^6.0.3",
         "axios": "^0.19.0",
         "final-form": "^4.18.5",
         "firebase": "^7.2.1",
         "lodash": "^4.17.15",
         "react": "16.9.0",
+        "react-content-loader": "^4.3.2",
         "react-final-form-hooks": "^2.0.1",
         "react-native": "0.61.2",
         "react-native-gesture-handler": "^1.4.1",
@@ -25,6 +33,8 @@
         "react-native-paper": "^2.16.0",
         "react-native-reanimated": "^1.4.0",
         "react-native-screens": "^2.0.0-alpha.4",
+        "react-native-simple-markdown": "^1.1.0",
+        "react-native-svg": "^9.13.3",
         "react-native-tab-view": "^2.10.0",
         "react-native-vector-icons": "^6.6.0",
         "react-native-webview": "^7.4.2",
