--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "react-content-loader": "^4.3.2",
         "react-final-form-hooks": "^2.0.1",
         "react-native": "0.61.2",
+        "react-native-dotenv": "^0.2.0",
         "react-native-gesture-handler": "^1.4.1",
         "react-native-linear-gradient": "^2.5.6",
         "react-native-material-dropdown": "^0.11.1",
